[package]
name = "blackjack"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "blackjack"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
strum = "0.23.0"
strum_macros = "0.23.0"
anchor-spl = "0.18.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }